# Advance-Doccuments-Processing-

./: LICENSE  README.md  main.py  pyproject.toml  requirements.txt
Comparison/: comparison.ipynb
Comparison/Output_Image_Text/: Docling.txt  Unstructured_pdf_output.txt
Comparison/Output_Table_Text/: Langchain_pypdfloader.txt  Unstructured_pdf_output.txt  docling.txt  docling2.txt  pdfplumber_output.txt
Comparison/Output_code_Text/: Docling_output.md  Langchain_pypdfloader.txt  Unstructured_pdf_output.txt  pdfplumber_output.txt
Comparison/Output_formula/: PyMuPDF.txt  docling.md  extracted_text.txt
unstructured/: Extract_Image,Table,Text_from_Document_MultiModal_Summrizer_AAG_App_YT.ipynb  example.ipynb
