[project]
name = "advance-doc-parsing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "docling>=2.41.0",
    "ipykernel>=6.29.5",
    "lxml>=5.4.0",
    "matplotlib>=3.10.3",
    "pillow>=11.3.0",
    "pydantic>=2.11.7",
    "pymupdf>=1.26.3",
    "unstructured-pytesseract>=0.3.15",
    "unstructured[all-docs]>=0.18.5",
]
