[project]
name = "advance-doc-parsing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "docling>=2.41.0",
    "hf-xet>=1.1.5",
    "ipykernel>=6.29.5",
    "langchain>=0.3.26",
    "langchain-community>=0.3.27",
    "lxml>=5.4.0",
    "matplotlib>=3.10.3",
    "pdfplumber>=0.11.7",
    "pillow>=11.3.0",
    "pydantic>=2.11.7",
    "pymupdf>=1.26.3",
    "pypdf>=5.7.0",
    "unstructured-pytesseract>=0.3.15",
    "unstructured[all-docs]>=0.18.5",
]
